--- a/mobile-style.css
+++ b/mobile-style.css
@@ -137,10 +137,11 @@ section{
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
-  text-align: center;
+  text-align: left;
   align-items: center;
-  color:#CF1607;
-  font-weight: 600;
+  color:#333333;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 .food{
@@ -152,14 +153,20 @@ section{
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px; 
+  padding: 10px; 
 }
 
 .food i{
   font-size:2rem;
   color: #484848;
   cursor:pointer;
-  margin-bottom: 14%;
+  background-color: #ff9017;
+  text-align: center;
+  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 6.88557px;
+  margin-bottom: 4%;
 }
 
 .service{
@@ -171,14 +178,20 @@ section{
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px;
+  padding: 10px;
 }
 
 .service i{
   font-size:2rem;
   color: #484848;
   cursor:pointer;
-  margin-bottom: 14%;
+  background-color: #ff9017;
+  text-align: center;
+  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 6.88557px;
+  margin-bottom: 4%;
 }
 
 .help{
@@ -190,14 +203,20 @@ section{
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px;
+  padding: 10px;
 }
 
 .help i{
   font-size:2rem;
   color: #484848;
   cursor:pointer;
-  margin-bottom: 14%;
+  background-color: #ff9017;
+  text-align: center;
+  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 6.88557px;
+  margin-bottom: 4%;
 }
 
 .history{
@@ -209,12 +228,19 @@ section{
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px;
+  padding: 10px;
+  margin-top: -15px;
 }
 
 .history i{
   font-size:2rem;
   color: #484848;
   cursor:pointer;
-  margin-bottom: 14%;
+  background-color: #ff9017;
+  text-align: center;
+  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 6.88557px;
+  margin-bottom: 4%;
 }
