--- a/mobile-style.css
+++ b/mobile-style.css
@@ -141,7 +141,7 @@ section{
   align-items: center;
   color:#333333;
   font-size: 12px;
-  font-weight: 400;
+  font-weight: 550;
 }
 
 .food{
@@ -158,13 +158,13 @@ section{
 
 .food i{
   font-size:2rem;
-  color: #484848;
+  color: #fff;
   cursor:pointer;
-  background-color: #ff9017;
+  background-color: #ff1f32;
   text-align: center;
   padding: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 22px;
+  padding-bottom: 22px;
   border-radius: 6.88557px;
   margin-bottom: 4%;
 }
@@ -183,13 +183,13 @@ section{
 
 .service i{
   font-size:2rem;
-  color: #484848;
+  color: #fff;
   cursor:pointer;
-  background-color: #ff9017;
+  background-color: #5ac8fa;
   text-align: center;
   padding: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 22px;
+  padding-bottom: 22px;
   border-radius: 6.88557px;
   margin-bottom: 4%;
 }
@@ -208,13 +208,13 @@ section{
 
 .help i{
   font-size:2rem;
-  color: #484848;
+  color: #fff;
   cursor:pointer;
   background-color: #ff9017;
   text-align: center;
   padding: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 22px;
+  padding-bottom: 22px;
   border-radius: 6.88557px;
   margin-bottom: 4%;
 }
@@ -229,18 +229,17 @@ section{
   text-decoration: none;
   cursor: pointer;
   padding: 10px;
-  margin-top: -15px;
 }
 
 .history i{
   font-size:2rem;
-  color: #484848;
+  color: #fff;
   cursor:pointer;
-  background-color: #ff9017;
+  background-color: #8a2be2;
   text-align: center;
   padding: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 22px;
+  padding-bottom: 22px;
   border-radius: 6.88557px;
   margin-bottom: 4%;
 }
