--- a/mobile-style.css
+++ b/mobile-style.css
@@ -142,7 +142,6 @@ section{
   color:#333333;
   font-size: 12px;
   font-weight: 550;
-  background-color:#fff;
 }
 
 .food{
@@ -150,6 +149,7 @@ section{
   flex-direction: column;
   width: 25%;
   border: none;
+  box-shadow: 0px 10px 40px rgb(255, 255, 255);
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
@@ -174,6 +174,7 @@ section{
   flex-direction: column;
   width: 25%;
   border: none;
+  box-shadow: 0px 10px 40px rgb(255, 255, 255);
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
@@ -198,6 +199,7 @@ section{
   flex-direction: column;
   width: 25%;
   border: none;
+  box-shadow: 0px 10px 40px rgb(255, 255, 255);
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
@@ -222,6 +224,7 @@ section{
   flex-direction: column;
   width: 25%;
   border: none;
+  box-shadow: 0px 10px 40px rgb(255, 255, 255);
   border-radius: 20px;
   text-decoration: none;
   cursor: pointer;
