--- a/mobile-style.css
+++ b/mobile-style.css
@@ -122,14 +122,16 @@ section{
 }
 
 .welcome h1{
-  font-size: 1.25rem;
+  font-size: 20px;
+  font-weight: 700;
   color:#484848;
 }
 
 .welcome p{
-  font-size: .6875rem;
+  font-size: 11px;
+  font-weight: 400;
   margin-top: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
 
 .wel-container{
