--- a/style.css
+++ b/style.css
@@ -89,13 +89,18 @@ section{
 }
 
 .welcome h1, p{
-  font-size: 2rem;
   color:#484848;
 }
 
+.welcome h1{
+  font-size: 38px;
+  font-weight: 700;
+}
+
 .welcome p{
-  font-size: 1rem;
-  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 16px;
   margin-bottom: 20px;
 }
 
@@ -205,65 +210,23 @@ section{
   margin-bottom: 14%;
 }
 
-/* media queries 
-@media (max-width:777px){
-  #menu-bar{
-    display:initial;
-    color: #fff;
-    z-index: 0;
-    padding:.4rem .5rem;
-  }
-  #menu-bar.active{
-    color:#484848
-  }
-  header .navbar .login{
-    display: initial;
-  }
-  header{
-    background: #020a74;
-    flex-wrap: wrap;
-  }
-  header .logo{
-    margin: 0 auto;
-    font-weight: 540;
-    color: #fff;
-  }
-  header .navbar{
-    position:fixed;
-    top: -120%;
-    left: 0;
-    z-index: 10000;
-    min-height: 75vh;
-    width: 100%;
-    background:#fff;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content:center;
-  }
-  header .navbar a{
-    border-radius: .5rem;
-    padding:1rem;
-    font-size: 1.4rem;
-    font-weight: 540;
-    background:#fff;
-  }
-  header .navbar.active{
-    top:0;
-    z-index: -1;
-  }
-  header .navbar .featuredestinations{
-    display: none;
-  }
-  header .logo.active{
-    color:#484848;
-  }
-  .navbtn, .nav-img{
-    display: none;
-  }
-  .welcome p{
-    margin-top: 4px;
-    margin-bottom: 4px;
-  }
+.for-u{
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
 }
-*/
+
+.for-u p{
+  color:#CF1607;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.h1-foru-container{
+  color:#484848;
+}
+
+.h1-foru-container h1{
+  font-size: 38px;
+  font-weight: 700;
+}
