--- a/mobile-style.css
+++ b/mobile-style.css
@@ -259,7 +259,7 @@ section{
   padding-bottom: 10%;
 }
 
-.h1-container p{
+.h1-container a{
   color:#CF1607;
   font-size: 14px;
   font-weight: 700;
