--- a/style.css
+++ b/style.css
@@ -51,14 +51,14 @@ header{
 }
 
   header .logo{
-    font-size: 36.9px;
+    font-size: 2.306rem;
     font-weight: 800;
     color: #484848;
   }
 
   header .navbar a{
     color: #484848;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
     margin-left: 2rem;
   }
@@ -67,11 +67,42 @@ header{
     display: none;
   }
 
-  header ~ img{
-    height:200px;
-    width:100%;
-    object-fit: cover;
-    object-position: 80% 32%;
+/*Search Bar*/
+.search-bar img{
+  height:200px;
+  width:100%;
+  object-fit: cover;
+  object-position: 0 32%;
+  filter: blur(2px) brightness(94%);
+}
+
+  .search-bar .search-box{
+    position: absolute;
+    top:25%;
+    left: 40%;
+  }
+
+  .search-bar form {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .search-bar form ::placeholder{
+    color: #c2c6cc;
+    font-size: 0.875rem;
+    font-weight: 600;
+  }
+
+  .search-bar label{
+    display: block;
+    color:#484848;
+    font-size: 0.75rem;
+    font-weight: 600;
+  }
+
+  .search-bar form .reservation-input{
+    width: 240px;
+    background-color: #fff;
   }
 
 .navbtn {
@@ -95,15 +126,17 @@ section{
 }
 
   .welcome h1{
-    font-size: 38px;
+    font-size: 2.375rem;
     font-weight: 700;
+    margin-top: 2rem;
   }
 
   .welcome p{
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
-    margin-top: 16px;
-    margin-bottom: 20px;
+    margin-top: 1rem;
+    margin-bottom: 1.25rem;
+    margin-bottom: 2.4rem;
   }
 
 .wel-container{
@@ -112,7 +145,7 @@ section{
   justify-content: start;
   text-align: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: 700;
 }
 
@@ -126,10 +159,10 @@ section{
   width: 25%;
   border: none;
   box-shadow: 0px 10px 40px rgba(34, 34, 34, 0.05);
-  border-radius: 20px;
+  border-radius: 1.25rem;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px; 
+  padding: 2.5rem; 
 }
 
   .food:hover{
@@ -150,10 +183,10 @@ section{
   width: 25%;
   border: none;
   box-shadow: 0px 10px 40px rgba(34, 34, 34, 0.05);
-  border-radius: 20px;
+  border-radius: 1.25rem;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px;
+  padding: 2.5rem;
 }
 
   .service:hover{
@@ -174,10 +207,10 @@ section{
   width: 25%;
   border: none;
   box-shadow: 0px 10px 40px rgba(34, 34, 34, 0.05);
-  border-radius: 20px;
+  border-radius: 1.25rem;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px;
+  padding: 2.5rem;
 }
 
   .help:hover{
@@ -198,10 +231,10 @@ section{
   width: 25%;
   border: none;
   box-shadow: 0px 10px 40px rgba(34, 34, 34, 0.05);
-  border-radius: 20px;
+  border-radius: 1.25rem;
   text-decoration: none;
   cursor: pointer;
-  padding: 40px;
+  padding: 2.5rem;
 }
 
   .history:hover{
@@ -224,14 +257,14 @@ section{
   color:#484848;
 }
 
-  .h1-container p{
+  .h1-container a{
     color:#CF1607;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
   }
 
   .h1-container h1{
-    font-size: 38px;
+    font-size: 2.375rem;
     font-weight: 700;
   }
 
@@ -239,9 +272,9 @@ section{
   background-color: #484848;
   width: 147.58px;
   height: 6.33px;
-  border-radius: 3.1652px;
-  margin-top: 30px;
-  margin-bottom: 40px;
+  border-radius: 0.198rem;
+  margin-top: 1.875rem;
+  margin-bottom: 2.5rem;
 }
 
 .post-box{
@@ -264,7 +297,7 @@ section{
     width: 100%;
     object-fit: cover;
     padding-bottom: 1.4rem;
-    border-radius: 12.6501px;
+    border-radius: 0.791rem;
   }
 
   .post-box .post .content h3{
@@ -297,13 +330,13 @@ section{
   }
 
   .newsletter-box .content h3{
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
-    padding-bottom: 10px;
+    padding-bottom: 0.625rem;
   }
 
   .newsletter-box .content p{
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 500;
     color:#fff;
   }
@@ -312,7 +345,7 @@ section{
     color: #9a9a9a;
     width: 837.01px;
     height: 54.82px;
-    border-radius: 27.4085px;
+    border-radius: 1.718rem;
   }
 
   .newsletter-box input[type="submit"]{
@@ -322,10 +355,10 @@ section{
     position: relative;
     left: -59px;
     top:8.8px;
-    border-radius: 27px;
+    border-radius: 1.688rem;
     z-index: 0;
     color:#fff;
-    font-size: 34px;
+    font-size: 2.125rem;
     text-align: center;
     outline:none;
   }
@@ -348,7 +381,7 @@ section{
 
   .footer .box-container .head{
     flex-basis: 240px;
-    margin-top: -22px;
+    margin-top: -1.375rem;
   }
 
   .footer .box-container .head .btn-container{
@@ -360,14 +393,14 @@ section{
     width: 181.32px;
     height: 54.82px;
     background: #CF1607;
-    border-radius: 6.32504px;
+    border-radius: 0.395rem;
     margin-top: 2rem;
-    margin-right: 24px;
+    margin-right: 1.5rem;
   }
   
   .footer .box-container .head a h3{
     color: #fff;
-    font-size:18px;
+    font-size:1.125rem;
     font-weight: 600;
     position: relative;
     top:44%;
@@ -378,28 +411,28 @@ section{
     color:#484848;
   }
   .footer .box-container .box .logo {
-    font-size: 52.71px;
+    font-size: 3.294rem;
     font-weight: 800;
   }
 
   .footer .box-container .box p {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.4;
     color: #9a9a9a;
   }
 
   .footer .box-container .box h3{
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
     padding-bottom: 2.4rem;
   }
 
   .footer .box-container .box a{
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 550;
     display: block;
-    padding-bottom: 20px;
+    padding-bottom: 1.25rem;
   }
 
   .footer .box-container .box .social{
@@ -416,7 +449,7 @@ section{
     padding:2.4rem 0rem;
     margin-top: 1rem;
     font-size: 2rem;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
     color:#484848;
     border-top: 1.05417px solid #E0E2E6;
