--- a/style.css
+++ b/style.css
@@ -60,26 +60,70 @@ header{
     color: #484848;
     font-size: 1rem;
     font-weight: 600;
-    margin-left: 2rem;
+    margin-left: 2.4rem;
   }
 
-  header .navbar .login{
-    display: none;
-  }
+    header .navbar .login{
+      display: none;
+    }
+
+.navbtn {
+  border: none;
+  padding: 0.9rem 2rem;
+  border-radius: 1.515rem;
+  background-color: #CF1607;
+  display: inline-block;
+  font-size: medium;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 /*Search Bar*/
 .search-bar img{
-  height:200px;
+  height:300px;
   width:100%;
   object-fit: cover;
-  object-position: 0 32%;
-  filter: blur(2px) brightness(94%);
+  object-position: 0 34%;
+  filter: blur(2px) brightness(90%);
 }
+  /*Title*/
+  .search-bar .content {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 20%;
+    left: 28%;
+    text-shadow: .4px .4px #9a9a9a;
+  }
 
+    .search-bar .content h1{
+      color:#fff;
+      font-size: 2.625rem;
+    }
+
+    .search-bar .content .checkin{
+      margin-left: 2.4rem;
+      margin-top: .5rem;
+    }
+
+    .search-bar .content h3{
+      color:#fff;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+
+    .search-bar .content .underline{
+      background: #fff;
+      margin-top: .6rem;
+      width: 31.63px;
+      height: 2.11px;
+    }
+  
+  /*Search container*/
   .search-bar .search-box{
     position: absolute;
-    top:25%;
-    left: 40%;
+    top:30%;
+    left: 25.5%;
   }
 
   .search-bar form {
@@ -94,27 +138,97 @@ header{
   }
 
   .search-bar label{
-    display: block;
     color:#484848;
     font-size: 0.75rem;
     font-weight: 600;
   }
+    
+    /*Qr code scan btn*/
+    .search-bar form .bg-qr-search {
+      width: 170px;
+      height: 74px;
+      background-color: #fff;
+      display:grid;
+      align-content: center;
+      color: #484848;
+      font-size: 0.75rem;
+      font-weight: 600;
+      border-radius: 2.306rem 0 0 2.306rem;
+    }
 
-  .search-bar form .reservation-input{
-    width: 240px;
+    .search-bar form .qr-search {
+      height: 44px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-right: 1.05417px solid #DDDDDD;
+    }
+
+    .search-bar form .qr-search i{
+      font-size: 2rem;
+    }
+
+    .search-bar form .qr-search a{
+      padding-left: 1.2rem;
+    }
+  
+  /*Find Reservation*/
+  .search-bar form .bg-reservation-input{
+    width: 320px;
+    height: 74px;
     background-color: #fff;
+    display: grid;
+    align-content: center;
   }
 
-.navbtn {
-  border: none;
-  padding: 0.9rem 2rem;
-  border-radius: 1.515rem;
-  background-color: #CF1607;
-  display: inline-block;
-  font-size: medium;
-  text-decoration: none;
-  cursor: pointer;
-}
+    .search-bar form .reservation-input{
+      width: 320px;
+      height: 44px;
+      border-right: 1.05417px solid #DDDDDD;
+      padding-left: 1.4rem;
+    }
+
+    #reservation{
+      width: 280px;
+      margin-top: .4rem;
+    }
+
+  /*Find first name*/
+  .search-bar form .firstname-input{
+    width: 200px;
+    background-color: #fff;
+    display: grid;
+    align-content: center;
+    padding-left: 1.4rem;
+  }
+
+    #firstname{
+      margin-top: .4rem;
+    }
+
+  /*Search btn*/
+  .search-bar .bg-search-btn{
+    width: 60px;
+    background-color: #fff;
+    border-radius: 0 2.306rem 2.306rem 0;
+  }
+
+    .search-bar .search-btn{
+      background: #CF1607;
+      width: 74px;
+      height: 74px;
+      display: grid;
+      align-content: center;
+      text-align: center;
+      border-radius: 2.4rem;
+      position: relative;
+      left: -12px;
+    }
+
+      .search-bar .search-btn i{
+        font-size: 2rem;
+        color: #fff;
+      }
 
 /*welcome section*/
 section{ 
@@ -128,7 +242,6 @@ section{
   .welcome h1{
     font-size: 2.375rem;
     font-weight: 700;
-    margin-top: 2rem;
   }
 
   .welcome p{
@@ -139,6 +252,7 @@ section{
     margin-bottom: 2.4rem;
   }
 
+/*Service selection*/
 .wel-container{
   display: flex;
   flex-wrap: wrap;
@@ -149,10 +263,11 @@ section{
   font-weight: 700;
 }
 
-.wel-container a{
-  color:#CF1607;
-}
+  .wel-container a{
+    color:#CF1607;
+  }
 
+/*Food*/
 .food{
   display: flex;
   flex-direction: column;
@@ -177,6 +292,7 @@ section{
     margin-bottom: 14%;
   }
 
+/*Service*/
 .service{
   display: flex;
   flex-direction: column;
@@ -201,6 +317,7 @@ section{
     margin-bottom: 14%;
   }
 
+/*Help*/
 .help{
   display: flex;
   flex-direction: column;
@@ -225,6 +342,7 @@ section{
     margin-bottom: 14%;
   }
 
+/*History*/
 .history{
   display: flex;
   flex-direction: column;
@@ -277,6 +395,7 @@ section{
   margin-bottom: 2.5rem;
 }
 
+/*Media post*/
 .post-box{
   display: flex;
   flex-wrap: wrap;
@@ -341,10 +460,19 @@ section{
     color:#fff;
   }
 
-  .newsletter-box input[type="email"]{
-    color: #9a9a9a;
+  .newsletter-box .email-input{
+    background: #fff;
     width: 837.01px;
     height: 54.82px;
+    border-radius: 1.718rem;
+    border: 1.05417px solid #E8EAEC;
+  }
+
+  .newsletter-box input[type="email"]{
+    color: #9a9a9a;
+    width: 800.01px;
+    height: 52.82px;
+    padding-left: 1.4rem;
     border-radius: 1.718rem;
   }
 
@@ -353,8 +481,8 @@ section{
     height: 54.82px !important;
     background-color: #CF1607;
     position: relative;
-    left: -59px;
-    top:8.8px;
+    left: 48.848rem;
+    top:-3.3588rem;
     border-radius: 1.688rem;
     z-index: 0;
     color:#fff;
@@ -379,6 +507,7 @@ section{
     flex: 1 4rem;
   }
 
+  /*Company Logo*/
   .footer .box-container .head{
     flex-basis: 240px;
     margin-top: -1.375rem;
@@ -415,6 +544,7 @@ section{
     font-weight: 800;
   }
 
+  /*Links*/
   .footer .box-container .box p {
     font-size: 1rem;
     font-weight: 400;
