--- a/search-res.css
+++ b/search-res.css
@@ -229,7 +229,7 @@ section{
 /*Just For You*/
 .justforu {
   position: absolute;
-  top:94vh;
+  top:36rem;
   width: 100%;
 }
   .justforu .title {
