--- a/search-res.css
+++ b/search-res.css
@@ -103,11 +103,13 @@ header .navbar.active{
   z-index: -1;
 }
 
-header .logo.active{
-  color:#333333;
-  font-size: 1.8rem;
-  font-weight: 540;
-  padding-top: 20%;
+header .navbar.active a{
+  position: relative;
+  top:-10vh;
+}
+
+header .logo .active{
+  display: none;
 }
 
 /*Title*/
@@ -117,6 +119,8 @@ header .logo.active{
   object-fit: cover;
   object-position: 0 34%;
   filter: brightness(64%);
+  position: absolute;
+  z-index: -2;
 }
 
   /*Content title*/
@@ -125,6 +129,7 @@ header .logo.active{
     color: #fff;
     position: absolute;
     top:14%;
+    z-index: -2;
   }
 
   .title .content h2{
@@ -144,13 +149,12 @@ section{
 
 /*Search Container*/
 .search-container{
-  position: absolute;
   width: 100%;
   height: 390px;
   background: #FFFFFF;
   border: 0.52825px solid #FFFFFF;
   border-radius: 20px 20px 0px 0px;
-  top:30%;
+  margin-top:40%;
 }
 
   .search-container h2{
@@ -228,8 +232,7 @@ section{
 
 /*Just For You*/
 .justforu {
-  position: absolute;
-  width: 88%;
+  width: 100%;
   margin-top: 2rem;
 }
   .justforu .title {
