--- a/search-res.css
+++ b/search-res.css
@@ -112,6 +112,10 @@ header .logo .active{
   display: none;
 }
 
+header .navbar.active .logonav {
+  font-size: 2.4rem;
+}
+
 /*Title*/
 .title img{
   height: 174px;
