--- a/mobile-style.css
+++ b/mobile-style.css
@@ -91,7 +91,7 @@ header .navbar a{
 header .navbar .social {
   position:relative;
   left:-14.4px;
-  top:120px;
+  margin-top: 4rem;
 }
 
 header .navbar .social a{
@@ -109,10 +109,11 @@ header .navbar.active{
 }
 
 header .logo.active{
-  color:#333333;
-  font-size: 1.8rem;
-  font-weight: 540;
-  padding-top: 20%;
+  display: none;
+}
+
+header .navbar.active .logonav {
+  font-size: 2.4rem;
 }
 
 header ~ img{
