--- a/search-res.css
+++ b/search-res.css
@@ -86,7 +86,7 @@ header .navbar a{
 header .navbar .social {
   position:relative;
   left:-14.4px;
-  top:120px;
+  margin-top: 4rem;
 }
 
 header .navbar .social a{
@@ -104,8 +104,7 @@ header .navbar.active{
 }
 
 header .navbar.active a{
-  position: relative;
-  top:-10vh;
+  top:0;
 }
 
 header .logo .active{
