--- a/search-res.css
+++ b/search-res.css
@@ -174,7 +174,6 @@ section{
     display: flex;
     flex-direction: column;
   }
-
     .search-container form label{
       font-size: 0.75rem;
       font-weight: 400;
@@ -199,6 +198,20 @@ section{
         font-size: 0.875rem;
         font-weight: 500;
         color:#c2c6cc;
+      }
+
+    /*Message Pop UP*/
+    .search-container #popup{
+      display: none;
+    }
+      .search-container #popup.active{
+        display: initial;
+        color:#CF1607;
+        font-size: 12px;
+        font-weight: 600;
+        margin-top: 1.2rem;
+        margin-bottom: 1rem;
+        text-align: center;
       }
 
     /*Search btn*/
