--- a/search-res.css
+++ b/search-res.css
@@ -332,14 +332,17 @@ section{
       padding-bottom: .4rem;
     }
     .otp form .btn{
-      width: 100%;
-      height: 48px;
       background: #CF1607;
       border-radius: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
       margin-top: .2rem;
+      width: 100%;
+      height: 48px;
+    }
+    #confirm_btn:disabled{
+      background: #dddddd; 
     }
       .otp form .btn p{
         font-size: 0.875rem;
@@ -377,21 +380,20 @@ section{
       border: 1.05417px solid #E8EAEC;
     }
 
-  .otp form #popup{
+  .otp form #popupotp{
     display: none;
   }
-    .otp form #popup.active{
+    .otp form #popupotp.active{
       display: block;
+      word-wrap: break-word;
+      white-space: pre-wrap;
       color:#CF1607;
-      font-size: 14px;
+      font-size: 10px;
       font-weight: 600;
       margin-top: 1.2rem;
       margin-bottom: 1rem;
       text-align: center;
     }
-#confirm_btn:disabled{
-  background: #dddddd;
-}
 
 #phone_getcode:disabled{
   background: #dddddd;
