--- a/search-res.css
+++ b/search-res.css
@@ -301,7 +301,7 @@ section{
 .otp{
   position:fixed;
   width: 100%;
-  top:120%;
+  top:0;
   min-height: 100vh;
   background:rgba(0,0,0,.7);
   display: flex;
@@ -337,7 +337,6 @@ section{
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: .2rem;
       width: 100%;
       height: 48px;
     }
@@ -381,20 +380,21 @@ section{
     }
 
   .otp form #popupotp{
-    display: none;
+    visibility: hidden;
+    padding-top: .4rem;
+    padding-bottom: 1.2rem;
   }
     .otp form #popupotp.active{
+      visibility: visible;
       display: block;
       word-wrap: break-word;
       white-space: pre-wrap;
       color:#CF1607;
       font-size: 10px;
       font-weight: 600;
-      margin-top: 1.2rem;
-      margin-bottom: 1rem;
       text-align: center;
     }
-
+    
 #phone_getcode:disabled{
   background: #dddddd;
 }
