--- a/search-res.css
+++ b/search-res.css
@@ -301,7 +301,7 @@ section{
 .otp{
   position:fixed;
   width: 100%;
-  top:0;
+  top:120%;
   min-height: 100vh;
   background:rgba(0,0,0,.7);
   display: flex;
