--- a/mobile-style.css
+++ b/mobile-style.css
@@ -54,7 +54,7 @@ header{
   align-items:center;
   justify-content:space-between;
   flex-wrap: wrap;
-  padding: 1rem 5%;
+  padding: .8rem 5%;
   box-shadow: 0px 3px 22.5px rgba(0, 0, 0, 0.08);
   z-index: 0;
 }
@@ -64,7 +64,13 @@ header .logo{
   margin: 0 auto;
   font-weight: 500;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+  header .logo img{
+    width: 2rem;
+  }
 
   header .logo.active{
     display: none;
@@ -72,7 +78,7 @@ header .logo{
 
 header .navbar{
   position:fixed;
-  top: -120%;
+  top: -200%;
   left: 0;
   z-index: 10000;
   height: 100%;
@@ -116,7 +122,12 @@ header .navbar{
     header .navbar.active .logonav {
       font-size: 2.4rem;
       margin-bottom: 2rem;
+      display: flex;
+      align-items: center;
     }
+        header .navbar.active .logonav img{
+          width: 2.8rem;
+        }
 
   header ~ img{
     height:200px;
