--- a/search-res.css
+++ b/search-res.css
@@ -36,6 +36,7 @@ html{
 
 #menu-bar.active{
   color:#484848;
+  top:1.4vh;
 }
 
 header{
@@ -48,7 +49,7 @@ header{
   align-items:center;
   justify-content:space-between;
   flex-wrap: wrap;
-  padding: 1rem 5%;
+  padding: .8rem 5%;
   box-shadow: 0px 3px 22.5px rgba(0, 0, 0, 0.08);
   z-index: 0;
 }
@@ -58,11 +59,15 @@ header .logo{
   margin: 0 auto;
   font-weight: 500;
   color: #fff;
+  display: flex;
+  align-items: center;
 }
-
+  header .logo img{
+    width: 2rem;
+  }
 header .navbar{
   position:fixed;
-  top: -120%;
+  top: -200%;
   left: 0;
   z-index: 1000;
   height: 100%;
@@ -103,18 +108,19 @@ header .navbar.active{
   z-index: -1;
 }
 
-header .navbar.active a{
-  top:0;
-}
-
-header .logo .active{
+header .logo.active{
   display: none;
 }
 
 header .navbar.active .logonav {
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
 }
+    header .navbar.active .logonav img{
+      width: 2.8rem;
+    }
 
 /*Title*/
 .title img{
