--- a/mobile-style.css
+++ b/mobile-style.css
@@ -29,7 +29,6 @@ html{
 
 /*nav*/
 #menu-bar{
-  position: absolute;
   color: #484848;
   font-size: 1.5rem;
   cursor:pointer;
@@ -61,12 +60,12 @@ header{
 
 header .logo{
   font-size: 1.4rem;
-  margin: 0 auto;
   font-weight: 500;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-right: 4%;
 }
   header .logo img{
     width: 2rem;
@@ -128,7 +127,10 @@ header .navbar{
         header .navbar.active .logonav img{
           width: 2.8rem;
         }
-
+  header .account_settings{
+    font-size: 1.4rem;
+    color: #fff;
+        }
   header ~ img{
     height:200px;
     width:100%;
