--- a/checkin.css
+++ b/checkin.css
@@ -192,18 +192,35 @@ section{
     font-size: 14px;
     font-weight: 500;
   }
-  .info .reserved{
-    background-color: rgba(39, 174, 96, 0.1);
+  .info #bg-status{
     width: 86.9px;
     padding: 3.1695px 6.339px;
     border-radius: 15.8475px;
     text-align: center;
   }
-    .info .reserved p{
+  .info #status{
+    font-size: 12px;
+    font-weight: 600;
+  }
+  .info #bg-status.reserved{
+    background-color: rgba(39, 174, 96, 0.1);
+  }
+    .info #status.reserved{
       color: #27ae60;
-      font-size: 12px;
-      font-weight: 600;
     }
+  .info #bg-status.inhouse{
+    background-color: rgba(255, 215, 0, 0.1);
+  }
+    .info #status.inhouse{
+      color: rgb(224, 197, 18);
+    }
+  .info #bg-status.checkout{
+    background-color: rgba(255, 0, 0, 0.1);
+  }
+    .info #status.checkout{
+      color: rgb(228, 59, 21);
+    }
+    
 
 /*Button*/
 .checkin_btn{
@@ -216,6 +233,9 @@ section{
   font-size: 14px;
   font-weight: 600;
 }
+  #checkin:disabled{
+    background: #ddd;
+  }
 
 /*Checkin Selection*/
 .checkin_selection .title{
@@ -239,35 +259,36 @@ section{
   padding-left: 3.4%;
   margin-bottom: 4%;
 }
-  .checkin_selection .checkbox #name{
+  .checkin_selection .checkbox .name{
     color: #333;
     font-size: 14px;
     font-weight: 700;
   }
-  .checkin_selection .checkbox #status{
+  .checkin_selection .checkbox .status{
     color: #00b517;
     font-size: 12px;
     font-weight: 500;
   }
-.checkin_selection .not_verified{
+
+.checkin_selection #additionalGuest .not_verified{
   display: grid;
   grid-template-columns: repeat(2,auto);
   justify-content: space-between;
   align-items: center;
   padding-right: .64rem;
 }
-  .checkin_selection .not_verified #status{
+  .checkin_selection #additionalGuest .not_verified .status{
     color:#f53838;
   }
-  .checkin_selection .not_verified i{
+  .checkin_selection #additionalGuest .not_verified i{
     font-size: 19.25px;
     color: #1660CF;
     visibility: hidden;
   }
-  .checkin_selection .not_verified.active{
+  .checkin_selection #additionalGuest .not_verified.active{
     background: rgba(22, 96, 207, 0.14);
   }
-    .checkin_selection .not_verified.active i{
+    .checkin_selection #additionalGuest .not_verified.active i{
       visibility: visible;
     }
 
