--- a/pages/arrivalTime/localCss/arrivalTime.css
+++ b/pages/arrivalTime/localCss/arrivalTime.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2,auto);
   justify-content: space-between;
+  padding-bottom: 4%;
 }
   .formTitle h2{
   font-size: 14px;
@@ -14,7 +15,7 @@
     color: #333;
   }
 /*Button*/
-.checkin_btn{
+.btn{
   width: 100%;
   height: 48px;
   background: #CF1607;
@@ -23,4 +24,47 @@
   color:#fff;
   font-size: 14px;
   font-weight: 600;
+  margin-top: 4%;
 }
+form{
+  display: flex;
+  flex-direction: column;
+}
+form input{
+  height: 44px;
+  width: 100%;
+  background: #F4F6F9;
+  border: 0.5px solid #B2BCCA;
+  border-radius: 8px;
+  padding: 0 3.4%;
+  margin-bottom: 3.4%;
+}
+  form input::placeholder{
+    font-size: 14px;
+    font-weight: 600;
+    color: #333;
+  }
+    form input:disabled::placeholder{
+      color: rgba(9, 16, 29, 0.5);;
+    }
+  form input[type=time]{
+    font-size: 14px;
+    font-weight: 600;
+    color: #333;
+  }
+    form input[type=time]::-webkit-datetime-edit-ampm-field{
+      font-size: 14px;
+      font-weight: 600;
+      color: #333;
+    }
+  form label{
+    font-size: 12px;
+    font-weight: 400;
+    color: #828282;
+    padding-bottom: 2%;
+  }
+    form label span{
+      color: #CF1607;
+      font-size: 14px;
+      font-weight: 500;
+    }
