--- a/pages/arrivalTime/localCss/arrivalTime.css
+++ b/pages/arrivalTime/localCss/arrivalTime.css
@@ -26,6 +26,9 @@
   font-weight: 600;
   margin-top: 4%;
 }
+  .btn.active{
+    background: #828282;
+  }
 form{
   display: flex;
   flex-direction: column;
@@ -38,6 +41,9 @@ form input{
   border-radius: 8px;
   padding: 0 3.4%;
   margin-bottom: 3.4%;
+  font-size: 14px;
+  font-weight: 600;
+  color: #333;
 }
   form input::placeholder{
     font-size: 14px;
@@ -57,6 +63,9 @@ form input{
       font-weight: 600;
       color: #333;
     }
+  form input #arrivalTime{
+    width: 100%;
+  }
   form label{
     font-size: 12px;
     font-weight: 400;
@@ -68,3 +77,7 @@ form input{
       font-size: 14px;
       font-weight: 500;
     }
+
+.cloclet-container{
+  left:-22.175px !important;
+}
