--- a/pages/arrivalTime/localCss/arrivalTime.css
+++ b/pages/arrivalTime/localCss/arrivalTime.css
@@ -81,6 +81,6 @@ form input{
       font-weight: 500;
     }
 
-.cloclet-container{
-  left:-22.175px !important;
+.clocklet-container{
+  left: 34vw !important;;
 }
