--- a/src/app/id-submit/id-submit.component.html
+++ b/src/app/id-submit/id-submit.component.html
@@ -98,7 +98,7 @@
             </p>
           </div>
           <div class="videoBox">
-            <video id="videoFront" autoplay></video>
+            <video id="videoFront" autoplay playsinline></video>
           </div>
           <button type="button" onclick="frontImgCapture()" id="snap">
             <i class="fa-solid fa-camera"></i>
@@ -136,7 +136,7 @@
             </p>
           </div>
           <div class="videoBox">
-            <video id="videoBack" autoplay></video>
+            <video id="videoBack" autoplay playsinline></video>
           </div>
           <button type="button" onclick="backImgCapture()" id="snap">
             <i class="fa-solid fa-camera"></i>
