--- a/src/app/id-submit/id-submit.component.css
+++ b/src/app/id-submit/id-submit.component.css
@@ -173,7 +173,7 @@ background-color: black;
   height: 28vh;
   width: 90vw;
   left: 5vw;
-
+  z-index: 777;
 }
   .previewFront video{
     position: relative;
