--- a/src/app/id-submit/id-submit.component.css
+++ b/src/app/id-submit/id-submit.component.css
@@ -174,6 +174,7 @@ background-color: black;
   width: 90vw;
   left: 5vw;
   z-index: 777;
+  overflow: hidden;
 }
   .previewFront video{
     position: relative;
