--- a/src/app/checkin-success/checkin-success.component.html
+++ b/src/app/checkin-success/checkin-success.component.html
@@ -17,9 +17,10 @@
       <label for="guestEmail">Email</label>
       <input type="email" id="guestEmail" />
     </div>
-    <div class="send">
+    <a id="send">
       <div class="checkBox"><i class="fa-solid fa-check"></i></div>
       <p>Send this code to my email</p>
-    </div>
+    </a>
   </div>
+  <button class="btn" id="submitBtn">Confirm</button>
 </form>
