--- a/src/app/id-submit/id-submit.component.html
+++ b/src/app/id-submit/id-submit.component.html
@@ -7,7 +7,7 @@
     <p id="steps">Step 2 of 3</p>
   </div>
   <iframe name="dummyframe" id="dummyframe" style="display: none"></iframe>
-  <form onsubmit="continueCheckin()">
+  <form target="dummyframe" action="">
     <label for="firstName">First Name <span>*</span></label>
     <input
       type="text"
