--- a/src/app/checkin-success/checkin-success.component.html
+++ b/src/app/checkin-success/checkin-success.component.html
@@ -5,22 +5,6 @@
 </div>
 
 <form>
-  <div class="emailForm">
-    <div class="qrDisplay">
-      <img
-        id="qrGuest"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnybLZQkb8BG9uN4bX31TBXP51qPlA3gD00g&usqp=CAU"
-      />
-      <h2 class="guestName">Tam Le</h2>
-    </div>
-    <div class="inputEmail">
-      <label for="guestEmail">Email</label>
-      <input type="email" id="guestEmail" />
-    </div>
-    <a id="send">
-      <div class="checkBox"><i class="fa-solid fa-check"></i></div>
-      <p>Send this code to my email</p>
-    </a>
-  </div>
+  <div id="sendEmail"></div>
   <button class="btn" id="submitBtn">Confirm</button>
 </form>
