--- a/src/app/checkin-success/checkin-success.component.css
+++ b/src/app/checkin-success/checkin-success.component.css
@@ -16,6 +16,9 @@
     border: 2px solid #00B517;
     border-radius: 44px;
   }
+  .status .icon.hide{
+    z-index: -1;
+  }
   .status .icon i{
     position: relative;
     top: 1vh;
@@ -32,28 +35,28 @@
 form{
   padding: 2.4rem 1.4rem;
 }
-.qrDisplay{
+:host ::ng-deep .qrDisplay{
   display: grid;
   grid-template-columns: repeat(2,auto);
   justify-content: start;
   grid-gap: 1.4rem;
 }
-  .qrDisplay img{
+:host ::ng-deep .qrDisplay img{
     width: 100px;
     height: 100px;
   }
-  .qrDisplay h2{
+  :host ::ng-deep .qrDisplay h2{
     color: #333;
     font-size: 16px;
     font-weight: 600;
   }
 
-form label{
+  :host ::ng-deep form label{
   color: #828282;
   font-size: 12px;
   font-weight: 400;
 }
-  form input{
+    :host ::ng-deep form input{
     height: 44px;
     width: 100%;
     background: #F4F6F9;
@@ -64,15 +67,14 @@ form label{
     font-weight: 600;
     color: #333;
   }
-
-  form .emailForm .inputEmail{
+  :host ::ng-deep form .emailForm .inputEmail{
     margin-top: 1.4rem;
     display: grid;
     grid-template-columns: repeat(1,auto);
     grid-gap: .4rem;
   }
 
-  form .emailForm #send{
+  :host ::ng-deep form .emailForm #send{
     display: grid;
     grid-template-columns: repeat(2,auto);
     margin-top: 1rem;
@@ -81,13 +83,17 @@ form label{
     grid-gap: .64rem;
     position: relative;
     left: .4vw;
+    margin-bottom: 6vh;
   }
-    form .emailForm #send p{
+  :host ::ng-deep form .emailForm #send.hide{
+      z-index: -1;
+    }
+    :host ::ng-deep form .emailForm #send p{
       color: #333;
       font-size: 14px;
       font-weight: 400;
     }
-    form .emailForm #send .checkBox{
+    :host ::ng-deep form .emailForm #send .checkBox{
       background: #fff;
       border: 1px solid #99A8BD;
       border-radius: 2px;
@@ -95,19 +101,21 @@ form label{
       text-align: center;
       color: #fff;
     }
-      form .emailForm #send.active .checkBox{
+    :host ::ng-deep form .emailForm #send.active .checkBox{
         background: #1660CF;
         border: 1px solid #1660CF;
       }
 /*Button*/
 #submitBtn{
-  position: relative;
   width: 100%;
   height: 48px;
   background: #CF1607;
   border-radius: 100px;
-  margin-top: 6vh;
   color:#fff;
   font-size: 14px;
   font-weight: 600;
+  z-index: 0;
 }
+  #submitBtn.hide{
+    z-index: -1;
+  }
