--- a/src/app/search-res/search-res.component.css
+++ b/src/app/search-res/search-res.component.css
@@ -134,10 +134,13 @@ section{
   position: relative;
   left: 39.4vw;
 }
-.qrScan i{
-  color:#CF1607;
-  font-size: 2.4rem;
-}
+  .qrScan.hide{
+    z-index: -1;
+  }
+  .qrScan i{
+    color:#CF1607;
+    font-size: 2.4rem;
+  }
 
 /*Just For You*/
 .justforu {
